# LUTO-VUE

./: .gitignore  Build_Portable_Release.bat  README.md  Start_Dev_Server.bat  start_dashboard.bat  start_dashboard.command
assets/DRAFT_REZ_2025_Shapefile/: DRAFT_REZ_2025.dbf  DRAFT_REZ_2025.sbn  DRAFT_REZ_2025.sbx  DRAFT_REZ_2025.shp  DRAFT_REZ_2025.shp.xml  DRAFT_REZ_2025.shx  readme_legaldisclaimer.txt
assets/NSW_REZ_2025/cwo-rez-geographical-area-boundary/cwo-rez-geographical-area-boundary/: cwo-rez-geographical-area-boundary.dbf  (+4 more)
assets/NSW_REZ_2025/hcc-rez-geographical-area-boundary/: HCC_REZ_Export.dbf  HCC_REZ_Export.sbn  HCC_REZ_Export.sbx  HCC_REZ_Export.shp  HCC_REZ_Export.shx
assets/NSW_REZ_2025/ilw-rez-geographical-area-boundary/: Illawarra_REZ_V4_Aligned_to_Lots_20230213.dbf  Illawarra_REZ_V4_Aligned_to_Lots_20230213.sbn  Illawarra_REZ_V4_Aligned_to_Lots_20230213.sbx  Illawarra_REZ_V4_Aligned_to_Lots_20230213.shp  Illawarra_REZ_V4_Aligned_to_Lots_20230213.shx
luto2_api/: preprocess_spatial.py  pyproject.toml
luto2_api/app/: data_service.py  main.py
luto2_api/app/api/: routers.py
luto2_ui/: build-portable.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
luto2_ui/public/: rez_polygons.geojson
luto2_ui/src/app/: globals.css  layout.tsx  page.tsx
luto2_ui/src/components/: LandUseAreaChart.tsx  MapHub.tsx  TimeSeriesStackedChart.tsx  TransitionSankey.tsx
luto2_ui/src/store/: useDashboardStore.ts  useScenarioStore.ts
luto2_ui/src/utils/: api.ts  constants.ts  exportUtils.ts  units.ts
tasks/: lessons.md  todo.md
(+16 files in other folders)
