[project]
name = "luto2-spatial-api"
version = "0.1.0"
description = "FastAPI backend for LUTO2 Spatial Explorer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0"
]
